added filter and sort on the backend (not angular material built-in)
