# server/src/config/swagger.json
@@ -56,6 +56,24 @@
             "type": "integer",
             "description": "Define the limit for the records",
             "in": "query"
+          },
+          {
+            "name": "filter",
+            "type": "string",
+            "description": "Filter the invoices by item name",
+            "in": "query"
+          },
+          {
+            "name": "sortField",
+            "type": "string",
+            "description": "Define the sort field for sorting i.e item, date, due",
+            "in": "query"
+          },
+          {
+            "name": "sortDir",
+            "type": "string",
+            "description": "Define the sort direction for sorting i.e asc, desc",
+            "in": "query"
           }
         ],
         "responses": {
